--- a/BlogposterCMS/apps/designer/assets/scss/_layout-root.scss
+++ b/BlogposterCMS/apps/designer/assets/scss/_layout-root.scss
@@ -25,3 +25,8 @@ body.builder-mode .layout-container > .builder-grid {
   overflow: hidden;
   box-sizing: border-box;
 }
+
+body.builder-mode #builderViewport > .builder-grid {
+  width: 100%;
+  height: 100%;
+}
