--- a/BlogposterCMS/apps/designer/assets/scss/_layout-root.scss
+++ b/BlogposterCMS/apps/designer/assets/scss/_layout-root.scss
@@ -12,13 +12,16 @@
   align-items: flex-start;
 }
 
-body.builder-mode .layout-container > .builder-grid {
+.layout-container > .builder-grid {
   flex: 1 1 auto;
   align-self: stretch;
   width: 100%;
   height: 100%;
   min-width: 0;
   min-height: 0;
+}
+
+body.builder-mode .layout-container > .builder-grid {
   margin: 0 auto;
   background: white;
   border-radius: 12px;
