--- a/BlogposterCMS/apps/designer/assets/scss/_layout-root.scss
+++ b/BlogposterCMS/apps/designer/assets/scss/_layout-root.scss
@@ -10,18 +10,17 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  &.builder-grid {
+    flex: 1 1 auto;
+    align-self: stretch;
+    width: 100%;
+    height: 100%;
+    min-width: 0;
+    min-height: 0;
+  }
 }
 
-.layout-container > .builder-grid {
-  flex: 1 1 auto;
-  align-self: stretch;
-  width: 100%;
-  height: 100%;
-  min-width: 0;
-  min-height: 0;
-}
-
-body.builder-mode .layout-container > .builder-grid {
+body.builder-mode .layout-container.builder-grid {
   margin: 0 auto;
   background: white;
   border-radius: 12px;
