--- a/BlogposterCMS/apps/designer/assets/scss/_layout-root.scss
+++ b/BlogposterCMS/apps/designer/assets/scss/_layout-root.scss
@@ -22,6 +22,15 @@
   min-height: 0;
 }
 
+#layoutRoot > .builder-grid {
+  flex: 1 1 auto;
+  align-self: stretch;
+  width: 100%;
+  height: 100%;
+  min-width: 0;
+  min-height: 0;
+}
+
 body.builder-mode .layout-container > .builder-grid,
 body.builder-mode .layout-container.builder-grid {
   margin: 0 auto;
