Add layout switch bubble and simplify footer

--- a/BlogposterCMS/apps/designer/assets/scss/_sidebar.scss
+++ b/BlogposterCMS/apps/designer/assets/scss/_sidebar.scss
@@ -31,6 +31,10 @@
   cursor: grabbing;
 }
 
+.builder-sidebar .layout-switcher {
+  cursor: pointer;
+}
+
   // Expandable panel
   .builder-panel {
     position: fixed;
