Add access control settings and enforce registration toggle

--- a/BlogposterCMS/public/assets/scss/site.scss
+++ b/BlogposterCMS/public/assets/scss/site.scss
@@ -21,6 +21,7 @@
 @use 'pages/pages';
 @use 'pages/media';
 @use 'pages/settings';
+@use 'pages/access-settings';
 @use 'pages/system-settings';
 @use 'pages/login-strategies';
 @use 'pages/fonts' as fonts2;
