Add designer loading placeholders and error messaging

--- a/BlogposterCMS/public/assets/scss/site.scss
+++ b/BlogposterCMS/public/assets/scss/site.scss
@@ -18,6 +18,7 @@
 @use 'components/notification-hub';
 @use 'components/content-header';
 @use 'components/inline-add';
+@use 'components/designer-loader';
 @use 'pages/pages';
 @use 'pages/media';
 @use 'pages/settings';
